SlangNet.Bindings/Generated/Slang.cs


    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionVariable_GetName"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionVariable_GetName", ExactSpelling = true)]
    [return: NativeTypeName("const char *")]
    public static extern sbyte* ReflectionVariable_GetName(SlangReflectionVariable* var);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionVariable_GetType"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionVariable_GetType", ExactSpelling = true)]
    public static extern SlangReflectionType* ReflectionVariable_GetType(SlangReflectionVariable* var);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionVariable_FindModifier"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionVariable_FindModifier", ExactSpelling = true)]
    public static extern SlangReflectionModifier* ReflectionVariable_FindModifier(SlangReflectionVariable* var, SlangModifierID modifierID);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionVariable_GetUserAttributeCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionVariable_GetUserAttributeCount", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint ReflectionVariable_GetUserAttributeCount(SlangReflectionVariable* var);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionVariable_GetUserAttribute"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionVariable_GetUserAttribute", ExactSpelling = true)]
    public static extern SlangReflectionUserAttribute* ReflectionVariable_GetUserAttribute(SlangReflectionVariable* var, [NativeTypeName("unsigned int")] uint index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionVariable_FindUserAttributeByName"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionVariable_FindUserAttributeByName", ExactSpelling = true)]
    public static extern SlangReflectionUserAttribute* ReflectionVariable_FindUserAttributeByName(SlangReflectionVariable* var, [NativeTypeName("SlangSession *")] IGlobalSession* session, [NativeTypeName("const char *")] sbyte* name);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionVariableLayout_GetVariable"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionVariableLayout_GetVariable", ExactSpelling = true)]
    public static extern SlangReflectionVariable* ReflectionVariableLayout_GetVariable(SlangReflectionVariableLayout* var);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionVariableLayout_GetTypeLayout"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionVariableLayout_GetTypeLayout", ExactSpelling = true)]
    public static extern SlangReflectionTypeLayout* ReflectionVariableLayout_GetTypeLayout(SlangReflectionVariableLayout* var);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionVariableLayout_GetOffset"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionVariableLayout_GetOffset", ExactSpelling = true)]
    [return: NativeTypeName("size_t")]
    public static extern UIntPtr ReflectionVariableLayout_GetOffset(SlangReflectionVariableLayout* var, SlangParameterCategory category);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionVariableLayout_GetSpace"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionVariableLayout_GetSpace", ExactSpelling = true)]
    [return: NativeTypeName("size_t")]
    public static extern UIntPtr ReflectionVariableLayout_GetSpace(SlangReflectionVariableLayout* var, SlangParameterCategory category);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionVariableLayout_GetSemanticName"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionVariableLayout_GetSemanticName", ExactSpelling = true)]
    [return: NativeTypeName("const char *")]
    public static extern sbyte* ReflectionVariableLayout_GetSemanticName(SlangReflectionVariableLayout* var);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionVariableLayout_GetSemanticIndex"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionVariableLayout_GetSemanticIndex", ExactSpelling = true)]
    [return: NativeTypeName("size_t")]
    public static extern UIntPtr ReflectionVariableLayout_GetSemanticIndex(SlangReflectionVariableLayout* var);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionVariableLayout_getStage"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionVariableLayout_getStage", ExactSpelling = true)]
    public static extern SlangStage ReflectionVariableLayout_getStage(SlangReflectionVariableLayout* var);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionVariableLayout_getPendingDataLayout"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionVariableLayout_getPendingDataLayout", ExactSpelling = true)]
    public static extern SlangReflectionVariableLayout* ReflectionVariableLayout_getPendingDataLayout(SlangReflectionVariableLayout* var);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionParameter_GetBindingIndex"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionParameter_GetBindingIndex", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint ReflectionParameter_GetBindingIndex([NativeTypeName("SlangReflectionParameter *")] SlangReflectionVariableLayout* parameter);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionParameter_GetBindingSpace"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionParameter_GetBindingSpace", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint ReflectionParameter_GetBindingSpace([NativeTypeName("SlangReflectionParameter *")] SlangReflectionVariableLayout* parameter);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.IsParameterLocationUsed"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spIsParameterLocationUsed", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int IsParameterLocationUsed([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("SlangInt")] long entryPointIndex, [NativeTypeName("SlangInt")] long targetIndex, SlangParameterCategory category, [NativeTypeName("SlangUInt")] ulong spaceIndex, [NativeTypeName("SlangUInt")] ulong registerIndex, [NativeTypeName("bool &")] bool* outUsed);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionEntryPoint_getName"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionEntryPoint_getName", ExactSpelling = true)]
    [return: NativeTypeName("const char *")]
    public static extern sbyte* ReflectionEntryPoint_getName([NativeTypeName("SlangReflectionEntryPoint *")] SlangEntryPointLayout* entryPoint);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionEntryPoint_getNameOverride"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionEntryPoint_getNameOverride", ExactSpelling = true)]
    [return: NativeTypeName("const char *")]
    public static extern sbyte* ReflectionEntryPoint_getNameOverride([NativeTypeName("SlangReflectionEntryPoint *")] SlangEntryPointLayout* entryPoint);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionEntryPoint_getParameterCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionEntryPoint_getParameterCount", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint ReflectionEntryPoint_getParameterCount([NativeTypeName("SlangReflectionEntryPoint *")] SlangEntryPointLayout* entryPoint);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionEntryPoint_getParameterByIndex"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionEntryPoint_getParameterByIndex", ExactSpelling = true)]
    public static extern SlangReflectionVariableLayout* ReflectionEntryPoint_getParameterByIndex([NativeTypeName("SlangReflectionEntryPoint *")] SlangEntryPointLayout* entryPoint, [NativeTypeName("unsigned int")] uint index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionEntryPoint_getStage"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionEntryPoint_getStage", ExactSpelling = true)]
    public static extern SlangStage ReflectionEntryPoint_getStage([NativeTypeName("SlangReflectionEntryPoint *")] SlangEntryPointLayout* entryPoint);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionEntryPoint_getComputeThreadGroupSize"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionEntryPoint_getComputeThreadGroupSize", ExactSpelling = true)]
    public static extern void ReflectionEntryPoint_getComputeThreadGroupSize([NativeTypeName("SlangReflectionEntryPoint *")] SlangEntryPointLayout* entryPoint, [NativeTypeName("SlangUInt")] ulong axisCount, [NativeTypeName("SlangUInt *")] ulong* outSizeAlongAxis);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionEntryPoint_usesAnySampleRateInput"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionEntryPoint_usesAnySampleRateInput", ExactSpelling = true)]
    public static extern int ReflectionEntryPoint_usesAnySampleRateInput([NativeTypeName("SlangReflectionEntryPoint *")] SlangEntryPointLayout* entryPoint);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionEntryPoint_getVarLayout"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionEntryPoint_getVarLayout", ExactSpelling = true)]
    public static extern SlangReflectionVariableLayout* ReflectionEntryPoint_getVarLayout([NativeTypeName("SlangReflectionEntryPoint *")] SlangEntryPointLayout* entryPoint);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionEntryPoint_getResultVarLayout"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionEntryPoint_getResultVarLayout", ExactSpelling = true)]
    public static extern SlangReflectionVariableLayout* ReflectionEntryPoint_getResultVarLayout([NativeTypeName("SlangReflectionEntryPoint *")] SlangEntryPointLayout* entryPoint);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionEntryPoint_hasDefaultConstantBuffer"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionEntryPoint_hasDefaultConstantBuffer", ExactSpelling = true)]
    public static extern int ReflectionEntryPoint_hasDefaultConstantBuffer([NativeTypeName("SlangReflectionEntryPoint *")] SlangEntryPointLayout* entryPoint);
